option java_outer_classname = "FCSFrameProto";

message Message {
  required string       id 		   = 1;
  required int32 		eventCount = 2;
  repeated string		dimNames   = 3;  
  repeated Keyword 		keyword    = 4;
  repeated Dimension	dimension  = 5;
  repeated Subset		subset 	   = 6;  
  
  message  Keyword {
	required string key   = 1;
    required string value = 2;
  }
  
  message Dimension {
    required string 	id 		= 1;
  	required int32	 	index   = 2;
  	required string  	pnn     = 3;
  	optional string  	pns     = 4;
  	required double  	pneF1   = 5;
  	required double  	pneF2   = 6;
  	required double  	pnr     = 7;
  	optional string	 	compRef = 8;
  	repeated double  	data    = 9;
  	optional string	preferredTransformID = 10;
  }
	
  message Subset {
    
    enum Type {
   	  POLYGON 	= 0;
      RANGE 	= 1;
      BOOLEAN 	= 2;
    }
    
    required string id                 = 1;
    optional string overrideID		   = 2;
    optional string parentID           = 3;
    required string name               = 4;
    repeated int64  mask               = 5;
    required Type	subsetType		   = 6;
    repeated string dimensions         = 7;
    repeated double doubleValue		   = 8;
  }
}
